<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/_mm_category_page"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/_mm_page_heading"
        android:text="@string/_mm_categories"
        style="@style/MakeMojiHeaderTextAppearance"
        android:visibility="gone"

        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/_mm_cat_rv"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content">
        <TextView
            style="@style/MakeMojiHeaderTextAppearance"
            android:padding="4dp"
            android:id="@+id/_mm_abc_tv"
            android:textSize="14sp"
        android:layout_width="wrap_content"
        android:text="@string/_mm_abc"
        android:layout_height="wrap_content" />
        <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
        <ImageView
            android:padding="4dp"
            android:id="@+id/_mm_backspace_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mm_backspace_grey600_24dp"/>

    </LinearLayout>

</LinearLayout>